--- a/client/package.json
+++ b/client/package.json
@@ -10,18 +10,22 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.14",
-    "axios": "^1.4.0",
-    "emoji-picker-react": "^4.4.9",
-    "firebase": "^9.21.0",
-    "next": "13.4.1",
+    "axios": "^1.7.7",
+    "emoji-picker-react": "^4.12.0",
+    "firebase": "^10.14.1",
+    "next": "14.2.15",
     "postcss": "^8.4.23",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18",
+    "react-dom": "^18",
     "react-icons": "^4.8.0",
     "react-image-file-resizer": "^0.4.8",
     "socket.io-client": "^4.6.1",
     "tailwindcss": "^3.3.2",
     "wavesurfer.js": "^6.6.3",
     "zego-express-engine-webrtc": "2.24.5"
+  },
+  "devDependencies": {
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
