--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
     "autoprefixer": "^10.4.14",
     "axios": "^1.7.7",
     "emoji-picker-react": "^4.12.0",
@@ -17,8 +18,10 @@
     "postcss": "^8.4.23",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.1",
     "react-icons": "^4.8.0",
     "react-image-file-resizer": "^0.4.8",
+    "react-redux": "^9.1.2",
     "socket.io-client": "^4.6.1",
     "tailwindcss": "^3.3.2",
     "wavesurfer.js": "^6.6.3",
