--- a/server/package.json
+++ b/server/package.json
@@ -4,14 +4,16 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
-    "@prisma/client": "^4.14.0",
+    "@prisma/client": "^6.1.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
-    "prisma": "^4.14.0",
     "socket.io": "^4.6.1"
+  },
+  "devDependencies": {
+    "prisma": "^6.1.0"
   }
 }
